WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123994
[CSS Grid Layout] Fix the preferred logical widths code to work with spanning grid items
https://bugs.webkit.org/show_bug.cgi?id=123994
Summary
[CSS Grid Layout] Fix the preferred logical widths code to work with spanning...
Sergio Villar Senin
Reported
2013-11-07 07:58:50 PST
We should merge: Fix the preferred logical widths code to work with spanning grid items We implemented a simple algorithm to get the easy cases. The algorithm was completely wrong for more complex cases though, which was fine as the specification was completely silent on how to compute these logical widths. This has been raised to the working group in
http://lists.w3.org/Archives/Public/www-style/2013Oct/0054.html
No one objected after a week so we should be good to go. BUG=234197 Review URL:
https://codereview.chromium.org/26557002
Attachments
Patch
(11.30 KB, patch)
2013-11-27 03:09 PST
,
Sergio Villar Senin
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2013-11-27 03:09:08 PST
Created
attachment 217934
[details]
Patch
Sergio Villar Senin
Comment 2
2013-11-28 00:25:13 PST
***
Bug 112388
has been marked as a duplicate of this bug. ***
Sergio Villar Senin
Comment 3
2013-12-16 04:05:29 PST
Committed
r160633
: <
http://trac.webkit.org/changeset/160633
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug