[CSS Grid Layout] Fix the preferred logical widths code to work with spanning grid items https://bugs.webkit.org/show_bug.cgi?id=123994

Reviewed by Andreas Kling.

From Blink r159189 by <jchaffraix@chromium.org>

Source/WebCore:

There was no definition in the specs for the intrinsic / preferred
logical widths on the grid element. The following was proposed to
the WG and later accepted:
- The sum of the grid tracks' UsedBreadth is the minimum logical width
- The sum of the grid tracks' MaxBreadth is the maximum logical width

http://lists.w3.org/Archives/Public/www-style/2013Oct/0054.html
for more information.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::computeIntrinsicLogicalWidths):
(WebCore::RenderGrid::computedUsedBreadthOfGridTracks):
(WebCore::RenderGrid::minContentForChild):
(WebCore::RenderGrid::maxContentForChild):
* rendering/RenderGrid.h:

LayoutTests:

Extended the test case to include spanning grid items.

* fast/css-grid-layout/grid-preferred-logical-widths-expected.txt:
* fast/css-grid-layout/grid-preferred-logical-widths.html:

Canonical link: https://commits.webkit.org/143795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160633 268f45cc-cd09-0410-ab3c-d52691b4dbfc